<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.2</version>
        <!-- HINT: When upgrading to a newer version, check if the following bug is fixed: https://github.com/spring-projects/spring-security/issues/12665 -->
        <!-- If fixed, Remove the workaround in ClientShowcaseSecurityConfig. -->
    </parent>

    <groupId>at.porscheinformatik.pnet</groupId>
    <artifactId>pnet-idp-client</artifactId>
    <version>1.1.0-RC2-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Partner.Net Identity Provider Client Parent</name>
    <description>Parent Library for Identity Provider Client implementations</description>

    <scm>
        <connection>scm:git:git@github.com:porscheinformatik/pnet-idp-client.git</connection>
        <developerConnection>scm:git:git@github.com:porscheinformatik/pnet-idp-client.git</developerConnection>
        <url>https://github.com/porscheinformatik/pnet-idp-client</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>17</java.version>

        <docker-maven-plugin.version>0.35.0</docker-maven-plugin.version>
        <docker.tag>latest</docker.tag>
    </properties>

    <modules>
        <module>pnet-idp-client-showcase</module>
        <module>pnet-idp-client-openidconnect</module>
        <module>pnet-idp-client-core</module>
        <module>pnet-idp-client-saml2</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>at.porscheinformatik.pnet</groupId>
                <artifactId>pnet-idp-client-openidconnect</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>at.porscheinformatik.pnet</groupId>
                <artifactId>pnet-idp-client-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>at.porscheinformatik.pnet</groupId>
                <artifactId>pnet-idp-client-saml2</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <showDeprecation>true</showDeprecation>
                    </configuration>
                </plugin>

                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>